<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWordActivity">

    <EditText
        android:id="@+id/word_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_new_word"
        android:layout_margin="10dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/definition_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_new_definition"
        android:layout_margin="10dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save" />


</LinearLayout>