<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundColor" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add_item"
            android:src="@drawable/ic_baseline_add_24"
            app:fabSize="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="?attr/colorTertiary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/set_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_info"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="?attr/colorTertiary"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/flash_card"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp">

                <ImageView
                    android:id="@+id/flash_card_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center|start"
                    app:srcCompat="@drawable/flashcard"
                    android:contentDescription="@string/flashcard" />

                <TextView
                    android:id="@+id/flash_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/match_description"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/match_image"
                    android:text="@string/flash_card_title"
                    android:textColor="?attr/colorTertiary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/flash_card_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/flashcard_description"
                    android:textColor="?attr/colorTertiary" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/match_game"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp">

                <ImageView
                    android:id="@+id/match_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center|start"
                    app:srcCompat="@drawable/match"
                    android:contentDescription="@string/match_game"/>

                <TextView
                    android:id="@+id/match_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/match_description"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/match_image"
                    android:text="@string/match_game_title"
                    android:textColor="?attr/colorTertiary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/match_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/march_game_description"
                    android:textColor="?attr/colorTertiary" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cards"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="?attr/colorTertiary"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/quiz_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="660dp" />


        </LinearLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>